# TinyVPN

./: CMakeLists.txt  README.md
include/: client.h  common.h  server.h
src/: CMakeLists.txt  client.cpp  client_main.cpp  common.cpp  server.cpp  server_main.cpp
